feat: add shared bookmark content editing (#75)
